<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="library_no_external_storage">[no external storage]</string>
    <string name="library_not_a_directory">[not a directory]</string>
    <string name="library_permission_denied">[permission denied]</string>

    <string name="search_hint">SEARCH</string>
    <string name="introduction">Introduction:</string>
    <string name="introduction_content">Accessible and comprehensive, this guide is an indispensable tool for anyone in the sciences – new and established researchers, students and scientists – looking either to refresh their math skills or to prepare for the broad range of math, statistical and data-related challenges they are likely to encounter in their work or studies.
In addition to helping scientists improve their knowledge of key mathematical concepts, this unique book will help readers:
·                     Read mathematical symbols
·                     Understand formulas, data or statistical information
·                     Determine medication equivalents
·                     Analyze neuroimaging
 Mathematical concepts are presented alongside illustrative and useful real-world scien­tific examples and are further clarified through practical pen-and-paper exercises. Whether you are a student encountering high-level mathematics in your research or a seasoned scientist looking to refresh or strengthen your understanding, Math for Scientists: Refreshing the Essentials will be the book you reach for again and again.
Keywords
Epicycles Formula Reading Math Essentials Math in Science Math Refresher MRI Processing Neuropsychological Questionnaires Spectral Decomposition Tremor Analysis</string>

    <string name="label_mpg_ebooks">MPG.eBooks</string>
    <string name="download">Download</string>
    <string name="bookname">The Scientist as Philosopher</string>
    <string name="book_summary">Philosophical Consequences of Great Scientific Discoveries</string>
    <string name="author">Author:</string>
    <string name="author_name"></string>

    <string name="desc_mpg_ebooks">On this search platform, you can find all e-downloaded books that are accessible to all institutes of Max Planck Gesellschaft. Currently, you have access to 118,526 titles from Springer and 5,716 titles from OAPEN. The contents are continuously extended and updated. </string>

    <!--CollectionFragment-->
    <string name="my_bookshelf">My Bookshelf</string>


    <!--descriptions-->
    <string name="desc_ebooks_search_image_view">logo of mpg ebooks</string>
    <string name="desc_back_image_view">logo of back button</string>
    <string name="desc_book_cover_image_view">book cover</string>
    <string name="desc_edit_image_view">edit books</string>
    <string name="desc_avatar_image_view">user avatar</string>

    <!--progressbar-->
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="downloading">…</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="status_unknown">Wrong</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="retry">RETRY</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="wifiOnly">WiFi Only</string>

    <!--user-->
    <string name="user_name">Martin Becker</string>
    <string name="edit_profile">&gt;</string>
    <string name="motto">Never put off what you can read today until tomorrow !</string>
    <string name="following">Followings:  190</string>
    <string name="follower">Followers:  200</string>
    <string name="seperator">|</string>
    <string name="ranking">Ranking Board</string>
    <string name="rankingcontent1">This week, you have read</string>
    <string name="rankingcontent2">6</string>
    <string name="rankingcontent3">hours.</string>
    <string name="notes">My Notes</string>
    <string name="notes1">Notes</string>
    <string name="number_notes">36</string>
    <string name="comments">comments</string>
    <string name="number_comments">20</string>
    <string name="likes">likes</string>
    <string name="number_likes">55</string>
    <string name="lists">My Book Lists</string>
    <string name="lists1">Book Lists</string>
    <string name="number_lists">3</string>
</resources>
