<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.mpg.mpdl.ebooksreader.activity.fragment.UserFragment">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="120.5dp"
        android:layout_height="120.5dp"
        android:layout_marginTop="64.5dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_user_square"
        android:contentDescription="@string/desc_avatar_image_view"/>

    <ImageView
        android:layout_height="24.5dp"
        android:layout_width="24.5dp"
        android:layout_marginTop="24.5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="24.5dp"
        android:src="@drawable/ic_setting_square"
        android:contentDescription="@string/desc_avatar_image_view"/>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/avatarImageView"
        android:layout_marginTop="7dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/editprofileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/avatarImageView"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/usernameTextView"
        android:layout_marginStart="15dp"
        android:text="@string/edit_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/seperatorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/usernameTextView"
        android:layout_marginTop="6dp"
        android:text="@string/seperator"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/followingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/seperatorTextView"
        android:layout_marginEnd="12dp"
        android:layout_below="@+id/usernameTextView"
        android:layout_marginTop="6dp"
        android:text="@string/following"
        android:textSize="17sp"
        android:textColor="@color/cardview_dark_background"/>

    <TextView
        android:id="@+id/followerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/seperatorTextView"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/usernameTextView"
        android:layout_marginTop="6dp"
        android:text="@string/follower"
        android:textSize="17sp"
        android:textColor="@color/cardview_dark_background"/>

    <TextView
        android:id="@+id/mottoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/followingTextView"
        android:layout_marginTop="6dp"
        android:text="@string/motto"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/colorGrey"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rankingboardCardView"
        android:layout_width="580dp"
        android:layout_height="60dp"
        android:layout_below="@id/mottoTextView"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        card_view:cardBackgroundColor="#FFFAFA"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="560dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/rankiconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_rank_square"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/rankiconImageView"
                android:layout_marginStart="12dp"
                android:text="@string/ranking"
                android:textSize="17sp"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/rankingcontent2TextView"
                android:text="@string/rankingcontent1"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/rankingcontent2TextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/rankingcontent3TextView"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rankingcontent2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/rankingcontent3TextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/rankingcontent3"
                android:gravity="bottom"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/notesCardView"
        android:layout_width="580dp"
        android:layout_height="60dp"
        android:layout_below="@id/rankingboardCardView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        card_view:cardBackgroundColor="#FFFAFA"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="560dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/notesiconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_notes_square"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/notesiconImageView"
                android:layout_marginStart="12dp"
                android:text="@string/notes"
                android:textSize="17sp"
                android:textColor="@color/cardview_dark_background"
                android:gravity="center_vertical"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/numbernotesTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_toStartOf="@id/notesTextView"
                android:layout_marginEnd="10dp"
                android:text="@string/number_notes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/notesTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/notes1"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/likesTextView"
                android:layout_marginEnd="4dp"
                android:text="@string/number_likes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/likesTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/numbercommentsTextView"
                android:layout_marginEnd="10dp"
                android:text="@string/likes"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/numbercommentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/commentsTextView"
                android:layout_marginEnd="4dp"
                android:text="@string/number_comments"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/commentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/comments"
                android:gravity="bottom"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="580dp"
        android:layout_height="60dp"
        android:layout_below="@id/notesCardView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        card_view:cardBackgroundColor="#FFFAFA"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="560dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/listsiconImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_list_square"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/listsiconImageView"
                android:layout_marginStart="12dp"
                android:text="@string/lists"
                android:textSize="17sp"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/listsTextView"
                android:layout_marginHorizontal="10dp"
                android:text="@string/number_lists"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/listsTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/lists1"
                android:gravity="bottom"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>