<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.mpg.mpdl.ebooksreader.activity.BookDescriptionActivity">

    <ImageView
        android:id="@+id/detailBackImageView"
        android:layout_height="24.5dp"
        android:layout_width="24.5dp"
        android:layout_marginTop="24.5dp"
        android:layout_marginHorizontal="24.5dp"
        android:src="@drawable/ic_back_square"
        android:contentDescription="@string/desc_back_image_view"/>

    <Button
        android:id="@+id/downloadButton"
        android:layout_height="24.5dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="24.5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="24.5dp"
        android:background="#0B1746"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#FFFFFF"/>

    <ProgressBar
        android:id="@+id/Progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="410dp"
        android:layout_height="5dp"
        android:layout_marginTop="34dp"
        android:layout_marginHorizontal="70dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_bar"/>

    <TextView
        android:id="@+id/progress_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="490dp"
        android:layout_marginTop="27dp"
        tools:text="100%" />

    <ScrollView
        android:id="@+id/descriptionScrollView"
        android:layout_marginTop="72.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16.5dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/detailCoverImageView"
                android:layout_width="144.5dp"
                android:layout_height="204.5dp"
                android:layout_marginTop="24.5dp"
                android:layout_marginStart="20.5dp"
                android:src="@drawable/ic_open_book"
                android:elevation="20dp"
                android:background="@color/colorWhite"/>


            <TextView
                android:id="@+id/detailAbstractLabel"
                android:layout_width="wrap_content"
                android:layout_height="24.5dp"
                android:layout_marginStart="20.5dp"
                android:layout_below="@id/detailCoverImageView"
                android:layout_marginTop="28.5dp"
                android:text="@string/introduction"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#2F4F4F"/>

            <TextView
                android:id="@+id/detailAbstractTextView"
                android:layout_width="568.5dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20.5dp"
                android:layout_below="@id/detailAbstractLabel"
                android:layout_marginTop="12.5dp"
                android:text="@string/introduction_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detailCoverImageView"
                android:layout_marginStart="20.5dp"
                android:layout_marginTop="24.5dp"
                android:text="@string/bookname"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="#2F4F4F"
                android:maxLines="2"/>

            <TextView
                android:id="@+id/detailSubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detailCoverImageView"
                android:layout_marginStart="20.5dp"
                android:layout_below="@id/detailTitleTextView"
                android:layout_marginTop="8.5dp"
                android:text="@string/book_summary"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/detailAuthorLabel"
                android:layout_width="wrap_content"
                android:layout_height="20.5dp"
                android:layout_toEndOf="@id/detailCoverImageView"
                android:layout_marginStart="20.5dp"
                android:layout_below="@id/detailSubtitleTextView"
                android:layout_marginTop="34dp"
                android:text="@string/author"
                android:textSize="13sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detailAuthorTextView"
                android:layout_width="wrap_content"
                android:layout_height="20.5dp"
                android:layout_toEndOf="@id/detailAuthorLabel"
                android:layout_marginStart="20.5dp"
                android:layout_below="@id/detailSubtitleTextView"
                android:layout_marginTop="32.5dp"
                android:text="@string/author_name"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/detailPublishDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="20.5dp"
                android:layout_toEndOf="@id/detailCoverImageView"
                android:layout_below="@id/detailAuthorLabel"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20.5dp"
                android:textStyle="italic"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/detailPublisherTextView"
                android:layout_width="wrap_content"
                android:layout_height="20.5dp"
                android:layout_toEndOf="@id/detailPublishDateTextView"
                android:layout_below="@id/detailAuthorLabel"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10.5dp"
                android:textStyle="italic"
                android:textSize="13sp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>